custom.css
/*
Copyright 2017 Bryan Keller (https://github.com/widget-)

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

:root {
   /* Modify these to change your theme colors: */
   --primary: #66D9EF;
   --text: #d6dce6;
   --background: #282A2E;
   --background-elevated: #323844;

   /* These should be less important: */
   --background-hover: rgba(0, 0, 0, 0.1);
   --background-light: #AAA;
   --border-bright: rgba(0, 0, 0, 0.35);

   --border-dim: #15171b;
   --border-bright: rgba(0, 0, 0, 0.36);

   --text-bright: #FFF;
   --text-special: var(--primary);

   --scrollbar-background: #000;
   --scrollbar-border: var(--primary);
}

h1, h2, h3, h4 {
  color: var(--text);
}

/* left scrollbar */
.TeamSidebar, .TeamSidebar .StoplightContainer, .TeamSidebar .TeamSidebar-addArea {
   background-color: var(--background) !important;
   box-shadow: var(--background) 1px 1px 25px;
   z-index: 1;
}

.TeamSidebarItem.unreads .TeamSidebarItem-indicator {
   background-color: var(--border-bright) !important;
   opacity: 1;
}

.TeamSidebarItem-unreadHighlights {
   background-color: var(--border-bright) !important;
   color: var(--text-bright) !important;
}

#msgs_scroller_div::-webkit-scrollbar-track, #client_body::before, .client_container,
#search_terms, #client_body, #footer, ts-message, .channel_header, ts-jumper ts-jumper-container,
ts-jumper input[type="text"],
.supports_custom_scrollbar:not(.slim_scrollbar) #col_channels:hover #channels_scroller::-webkit-scrollbar-track{
  background: var(--background)  !important;
}

#channels_scroller.show_which_channel_is_active[class] li.active .presence.active i.presence_icon,
#channels_scroller.show_which_channel_is_active[class] li.active .slackbot_icon,
#channels_scroller.show_which_channel_is_active[class] li.active .presence.away i.presence_icon {
  color: inherit !important;
}

#client_body::before {
  border-bottom: 1px solid var(--background) !important;
}

ts-message, .channel_title .channel_name, ts-jumper input[type="text"],
ts-jumper ol li .member_real_name, ts-jumper ol li .view_name, ts-jumper ol li .channel_name {
  color: var(--text) !important;
}

.light_theme ts-message .message_content a.message_sender, #msg_input::-webkit-input-placeholder,
ts-jumper input[type="text"]::-webkit-input-placeholder {
  color: var(--text) !important;
}

#msg_input, #primary_file_button {
  background: transparent !important;
  color: var(--text) !important;
  border-color: var(--border-dim) !important;
}

.day_container .day_divider .day_divider_label, .day_divider .day_divider_label,
#convo_container .convo_flexpane_divider .reply_count {
  color: var(--text) !important;
  background-color: var(--background-elevated) !important;
  border: 1px solid var(--border-bright) !important;
  border-radius: 1rem;
}
#convo_container .convo_flexpane_divider .reply_count {
   border-radius: 10px;
   padding: 0px 10px;
}

.mention_day_container_div .day_divider:before {
   background-color: transparent !important;
}

.day_container .day_msgs {
  border-top: 1px solid var(--border-dim) !important;
}

textarea, input[type="text"], #file_comment_textarea {
   background-color: var(--background) !important;
   border-color: var(--border-dim) !important;
   color: var(--text) !important;
}
textarea:focus, input[type="text"]:focus, #file_comment_textarea {
   border-color: var(--border-bright) !important;
   color: var(--text-bright) !important;
}

ts-message {
   border-radius: 5px;
   margin: 1px 5px !important;
   padding-right: 20px !important;
   border-left: 1px solid transparent !important; /* reserve space for hover */
   border-right: 1px solid transparent !important;
}

ts-message:hover {
   background: var(--background-hover) !important;
   /*border: 1px solid var(--border-bright) !important*/
}

/*#msgs_unread_divider + ts-message:hover, ts-message:first-child {
  margin-top: 1px !important;
}
ts-message:last-child {
  margin-bottom: 1px !important;
}*/

#messages_container::after {
   background: none !important;
}

.bot_label {
   padding: 0 4px !important;
   border-radius: 3px !important;
   background: var(--background) !important;
   border: 1px solid var(--border-bright);
}


.file_container:after{
   background-image: -webkit-linear-gradient(top,rgba(255,255,255,0) 0,#333 100%) !important;
}

.rxn,
#team_menu,
#col_channels,
#col_channels_footer,
pre,
ts-message .action_hover_container .btn_msg_action,
#messages_container.has_top_messages_banner:before,
.file_container,
.file_container .CodeMirror .CodeMirror-code>div:before, .file_container .CodeMirror .sssh-line:before, .file_container .sssh-code .CodeMirror-code>div:before, .file_container .sssh-code .sssh-line:before,
#col_flex,
.search_message_result,
#flex_contents .heading,
#flex_contents .heading a,
#flex_contents .subheading,
.search_result_with_extract,
#search_filters a,
.menu,
.menu #menu_items_scroller,
.btn, .btn_outline {
  background: var(--background-elevated) !important;
}
/* ... */

